# SWARMZV12

./: # Code Citations.md  .dockerignore  .editorconfig  .env  .env.example  .gitignore  .vscode_keybindings_reference.txt  404.html  APP_STORE_BUILD.cmd  ARCHITECTURE.md  BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB.txt  CHANGELOG.md  CONTRIBUTING.md  CREATE_MOBILE_PACKAGE.cmd  CREATE_SWARMZ_APP_ICON.ps1  DEPLOYMENT.md  Dockerfile  EXAMPLES.txt  FIRST_RUN.md  FIX_SWARMZ_LAUNCHERS.py  FLUX-infinity (1).html  HEALTHCHECK.py  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  MARKETPLACE.md  MATRIX_REORGANIZE.ps1  MOBILE_APP_DEPLOYMENT_GUIDE.md  NEXUSMON_INTEGRATION_AUDIT.md  NEXUSMON_INTEGRATION_REPORT.md  ONE_BUTTON_SWARMZ_OWNERSHIP_PACK.py  PACK_EXE.ps1  PHONE_APP_QUICKSTART.md  PHONE_OFFLINE_SETUP.md  PLAN.md  PRESS_KIT.md  PROJECT_STRUCTURE.md  Procfile  QUICKSTART.md  (+141 more)
.claude/: settings.local.json
.continue/: config.json  prompt
.github/: copilot-instructions.md  pull_request_template.md
.private/: arch.md  companion.md  impl.md  runnability.md  runtime.md  structure.md  summary.md
SWARMZ_MOBILE_PACKAGE/: README_MOBILE.md  start_swarmz.sh  swarmz.py
addons/: __init__.py  approval_queue.py  auth_gate.py  backup.py  budget.py  causal_ledger.py  config_ext.py  drift_scanner.py  encrypted_storage.py  entropy_budget.py  external_extension_api.py  golden_run.py  guardrails.py  memory_boundaries.py  operator_contract.py  pack_artifacts.py  quarantine.py  rate_limiter.py  red_team_tests.py  replay.py  schema_version.py  security.py  strategy_registry.py  swarm_protocol.py
alembic/: env.py
api/: bootstrap_models.py  bootstrap_routes.py  bootstrap_service.py  build_milestones_models.py  build_milestones_routes.py  build_milestones_service.py  claimlab_routes.py  companion_core_models.py  companion_core_routes.py  companion_core_service.py  database_models.py  database_routes.py  database_service.py  foundation_models.py  foundation_routes.py  foundation_service.py  governance_config_routes.py  operator_auth_models.py  operator_auth_routes.py  operator_auth_service.py
artifacts/: baseline-working-tree.txt  constitution_audit.json  manifest-validation-status.json  pr_body_manifest_v1.md
backend/: app.py  autonomous_runtime.py  cockpit_telemetry.py  code_drafting_engine.py  evolution_council.py  evolution_planner.py  evolution_planner_api.py  evolution_scoring.py  health_model.py  life_api.py  life_registry.py  life_runtime.py  proposal_registry.py  refactor_api.py  refactor_scaffold.py  safety_intelligence.py  simulation_api.py  simulation_layer.py  symbolic_api.py  symbolic_audit.py  symbolic_governance.py  symbolic_lineage_log.py  symbolic_manifest_schema.py  symbolic_registry.py  symbolic_runtime.py  symbolic_types.py
(+1790 files in other folders)
