[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmz"
version = "0.1.0"
description = "SWARMZ runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "numpy>=2.1.0",
    "PyYAML>=6.0.0",
    "PyJWT>=2.11.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["swarmz*", "swarmz_runtime*", "swarmz_app*", "kernel_runtime*", "addons*"]
exclude = [
	"swarmz-mobile*",
	"*.node_modules*",
	"node_modules*",
	"tests*",
	"build*",
	"dist*",
	"_backup*"
]
